submit button bug that causes text to shift to right only on mobile safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,7 @@ body {
 }
 
 #submitButton {
+  padding: 5px;
   text-align: center;
   font-size: 1em;
   color: var(--dark);
